--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Tracking",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "build": "echo \"No build step required\" && exit 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,5 +16,9 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
+
